--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,35 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '5.3.0'
+    id 'io.qameta.allure' version '2.9.6'
 }
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
-
-// кодировка файлов (если используете русский язык в файлах)
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    version = '2.16.1'
+    useJUnit5 {
+        version = '2.16.1'
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    // библиотека com.codeborne:selenide используется при построении проекта с использованием Selenide
-    testImplementation 'com.codeborne:selenide:6.13.0'
-
-    // при реализации проекте с использованием Selenium вместо библиотеки com.codeborne:selenide подключаются
-    // org.seleniumhq.selenium:selenium-java и io.github.bonigarcia:webdrivermanager
-    // testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
-    // testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'com.codeborne:selenide:6.3.5'
+    testImplementation 'io.qameta.allure:allure-selenide:2.17.3'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
     useJUnitPlatform()
-    // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
-    // свойство selenide.headless используется в проектах на основе Selenide
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
