--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 plugins {
     id 'java'
-    id 'io.freefair.lombok' version '5.3.0'
-    id 'io.qameta.allure' version '2.9.6'
 }
 
 group 'ru.netology'
@@ -11,11 +9,8 @@ sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
-allure {
-    version = '2.16.1'
-    useJUnit5 {
-        version = '2.16.1'
-    }
+repositories {
+    mavenCentral()
 }
 
 repositories {
@@ -23,10 +18,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:6.13.0'
-    testImplementation 'io.qameta.allure:allure-selenide:2.17.3'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:4.3.3'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
+
 }
 
 test {
